<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_validate_chasis"
            android:icon="@drawable/ic_barcode_black"
            android:title="@string/menu_validate_chasis" />
        <item
            android:id="@+id/nav_inspeccion"
            android:icon="@drawable/ic_list_ot_black"
            android:title="@string/menu_inspeccion" />
        <item
            android:id="@+id/nav_validate_client"
            android:icon="@drawable/ic_user_type"
            android:title="@string/menu_validate_client" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_salir" />
    </group>


</menu>
