<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="24sp" />

    <LinearLayout

        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            />
        <LinearLayout
            android:id="@+id/dialog_button_maintenance"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_below="@+id/tv_ot_number"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_base"
                android:fontFamily="sans-serif-condensed"
                android:padding="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_fix"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_maintenance"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_button_tool"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_below="@+id/tv_ot_number"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_base"
                android:fontFamily="sans-serif-condensed"
                android:padding="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_tools"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_job"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_button_warranty"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_below="@+id/tv_ot_number"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_base"
                android:fontFamily="sans-serif-condensed"
                android:padding="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_warranty"
                android:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_warranty"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp" />
        </LinearLayout>
        <TextView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            />
    </LinearLayout>
</RelativeLayout>
