<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

             <ImageView 
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/tvs" />

            <LinearLayout
                android:id="@+id/maincontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_main_button"
                    android:orientation="horizontal">

                     <ImageView
                         android:tint="@color/colorPrimary"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_info" />

                    <EditText
                        android:id="@+id/user"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/edittext_main_button"
                        android:gravity="center_vertical"
                        android:hint="@string/main_id"
                        android:inputType="text"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_main_button"
                    android:orientation="horizontal">

                     <ImageView
                        android:tint="@color/colorPrimary"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_key" />

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="17.5dp"
                        android:background="@drawable/edittext_main_button"
                        android:gravity="center_vertical"
                        android:hint="@string/main_pass"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="20sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButtonPrintfinger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/ingresar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_login"
                        android:text="@string/main_button"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:typeface="normal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>