<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_main_button"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="left|center_vertical"
                    android:text="Modelo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/vehicle_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/r2_vehicle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/r3_vehicle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="R3"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp" />
                </RadioGroup>

            </LinearLayout>

            <ImageView
                android:id="@+id/type_picture"
                android:layout_width="420dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="50"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/back_picture"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop" />

                            <ImageView
                                android:id="@+id/back_picture_btn"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="64dp"
                                android:layout_marginEnd="15dp"
                                android:clickable="true"
                                android:src="@drawable/ic_menu_camera"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/back_picture"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/back_picture"
                                android:textSize="20dp" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="50"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/front_picture"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop" />

                            <ImageView
                                android:id="@+id/front_picture_btn"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="64dp"
                                android:layout_marginEnd="15dp"
                                android:clickable="true"
                                android:src="@drawable/ic_menu_camera" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/front_picture"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:text="@string/front_picture"
                                android:textSize="20dp" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="50"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/left_picture"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop" />

                            <ImageView
                                android:id="@+id/left_picture_btn"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="64dp"
                                android:layout_marginEnd="15dp"
                                android:clickable="true"
                                android:src="@drawable/ic_menu_camera"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/left_picture"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:text="@string/left_picture"
                                android:textSize="20dp" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="50"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/right_picture"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop" />

                            <ImageView
                                android:id="@+id/right_picture_btn"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="64dp"
                                android:layout_marginEnd="15dp"
                                android:clickable="true"
                                android:src="@drawable/ic_menu_camera"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/right_picture"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="10dp"
                                android:text="@string/right_picture"
                                android:textSize="20dp" />
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="left|center_vertical"
                android:text="Inventario de Recepción"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
            <LinearLayout
                android:id="@+id/check_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/fragment_coment_user"
                        android:textSize="20dp" />
                    <EditText
                        android:id="@+id/comment_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="17.5dp"
                        android:background="@drawable/edittext_main_button"
                        android:gravity="left|center_vertical"
                        android:maxLines="4"
                        android:hint="Ingrese comentario del cliente"
                        android:maxLength="1000"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textColorLink="#FFF"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/fragment_coment_tech"
                        android:textSize="20dp" />
                    <EditText
                        android:id="@+id/comment_job"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="17.5dp"
                        android:background="@drawable/edittext_main_button"
                        android:gravity="left|center_vertical"
                        android:maxLines="4"
                        android:hint="Ingrese comentario del técnico"
                        android:maxLength="1000"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="#FFFFFF"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>